added docker directory to SABIO

--- a/data/tables_to_data_v0_4_minimal.ipynb
+++ b/data/tables_to_data_v0_4_minimal.ipynb
@@ -196,6 +196,153 @@
    "source": [
     "df.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c1f21ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/valentin/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3457: DtypeWarning: Columns (0,3,4,8,9,10,11,15,17,18,19,20,21,22,24,25,26,27,29,31,32,34,38,39,42,43,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,66,67,68,69,71,79,80) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "id_fields = [\"DepartmentID\", \"ClassificationID\", \"ObjectName\", # this is the type of object\n",
+    "             \"Medium\", \"Provenance\", \"Exhibitions\"]\n",
+    "date_fields = [\"BeginISODate\", \"EndISODate\", \"Dated\"]\n",
+    "txt_fields = [\"Title\", \"Description\", \"Notes\", \"CuratorialRemarks\", \"RelatedWorks\", \"HistAttributions\"]\n",
+    "relevant_fields = id_fields + date_fields + txt_fields\n",
+    "objs = pd.read_csv(tblpath + f\"Objects_{k}.csv.gz\").set_index(\"ObjectID\")[relevant_fields]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f823d4e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([      1,       2,       3,       4,       5,       6,       7,       8,\n",
+       "             9,      10,\n",
+       "       ...\n",
+       "       1140711, 1140712, 1140713, 1140714, 1140715, 1140716, 1140717, 1140718,\n",
+       "       1140719, 1140720],\n",
+       "      dtype='object', name='ObjectID', length=872745)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objs.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0053ac8a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5d742149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"NMvW.v0_4.csv.gz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "af4dc58f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'DepartmentID', 'ClassificationID', 'ObjectName', 'Medium',\n",
+       "       'Provenance', 'Exhibitions', 'start_date', 'end_date', 'date_string',\n",
+       "       'name', 'description', 'Notes', 'CuratorialRemarks', 'RelatedWorks',\n",
+       "       'HistAttributions', 'Classification', 'AATCN', 'SubClassification',\n",
+       "       'Department', 'source_url'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "78105cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53        Is gedateerd voor/before 1963 (omdat het genum...\n",
+       "54        Is gedateerd voor/before 1963 (omdat het genum...\n",
+       "74        Geruild tegen 29 voorwerpen van het Museum für...\n",
+       "109       Bij de voorbereidingen van de tentoonstelling ...\n",
+       "111                                      Herkomst onbekend.\n",
+       "                                ...                        \n",
+       "146566    Bruikleen 23-02-1914 Payeti *[nT], Sumba.\\r\\nD...\n",
+       "146567    Bruikleen 23-02-1914 Payeti *[nT], Sumba.\\r\\nD...\n",
+       "146573    Door dr. Büttikofer intertijd meegebracht van ...\n",
+       "146574    Door dr. Büttikofer intertijd meegebracht van ...\n",
+       "146690    verworven van of uit nalatenschap van J.J. van...\n",
+       "Name: Provenance, Length: 20346, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Provenance[~df.Provenance.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8a87b62b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24644720"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.memory_usage().sum()"
+   ]
   }
  ],
  "metadata": {
@@ -214,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
